# five-minute-microservices

./: .gitignore  BENCH.md  NOTES.org  README.md
c/vanilla/: Dockerfile  Makefile  Makefile.in  Wakefile  config.h  configure.ac  main  main.c  winmain.c
c/vanilla/scratch/: rough-main.c
clojure/luminus-webserver/: Capstanfile  Dockerfile  Procfile  README.md  project.clj
clojure/luminus-webserver/env/dev/clj/: user.clj
clojure/luminus-webserver/resources/docs/: docs.md
clojure/luminus-webserver/resources/html/: base.html
clojure/minimal-http/: CHANGELOG.md  README.md  project.clj
clojure/minimal-http/doc/: intro.md
clojure/minimal-http/src/minimal_http/: core.clj
clojure/minimal-http/test/minimal_http/: core_test.clj
clojure/vanilla/: configure.ac
clojure/vanilla/web-server/: CHANGELOG.md  README.md  project.clj
clojure/vanilla/web-server/doc/: intro.md
common-lisp/vanilla/: 5m-ms.asd  Makefile.in  configure.ac  start.sh  system-index.txt
common-lisp/vanilla/src/: 5m-ms.lisp
elixir/vanilla/: main.ex
elixir/vanilla/kv/: Makefile  README.md
elixir/vanilla/kv/lib/: kv.ex
elixir/vanilla/kv/test/: bucket_test.exs
elixir/vanilla/kvserver/: .gitignore  README.md  mix.exs
elixir/vanilla/kvserver/config/: config.exs
elixir/vanilla/kvserver/lib/: kvserver.ex
elixir/vanilla/kvserver/test/: kvserver_test.exs
erlang/vanilla/: Makefile  hello.beam  hello.erl  inets.erl
j/vanilla/: Makefile  configure.ac  webServer.ijs
nginx/vanilla/: .gitignore  Makefile  main.c  nowrap.c
nim/prologue/: Makefile  api.nim
node/vanilla/: Makefile  bootstrap  configure.ac  index.js
org/: time-spent.org
php/vanilla/: Makefile.in  index.php
python/fastapi/: .gitignore  Makefile  main.py
scheme/vanilla/: Makefile  index.scm
skel/make/: Makefile.in
(+16 files in other folders)
